--- a/mobile/src/main/res/layout/activity_main_activity_mobile.xml
+++ b/mobile/src/main/res/layout/activity_main_activity_mobile.xml
@@ -98,7 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="48 kg"
+        android:text="780kg"
         android:id="@+id/textView9"
         android:layout_below="@+id/textView7"
         android:layout_alignLeft="@+id/textView7"
@@ -108,17 +108,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="( 78 % )"
+        android:text="(78%)"
         android:id="@+id/textView10"
         android:layout_alignTop="@+id/textView9"
-        android:layout_toRightOf="@+id/textView5"
-        android:layout_toEndOf="@+id/textView5" />
+        android:layout_toEndOf="@+id/textView5"
+        android:layout_toRightOf="@+id/textView5" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Dispatch"
-        android:id="@+id/button"
+        android:id="@+id/dispatchBtn"
         android:layout_below="@+id/textView9"
         android:layout_alignLeft="@+id/textView8"
         android:layout_alignStart="@+id/textView8" />
@@ -137,7 +137,7 @@
         android:layout_height="wrap_content"
         android:text="Click Me Now"
         android:id="@+id/button3"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/dispatchBtn"
         android:layout_centerHorizontal="true" />
 
 
