--- a/mobile/src/main/res/layout/activity_main_activity_mobile.xml
+++ b/mobile/src/main/res/layout/activity_main_activity_mobile.xml
@@ -6,17 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityMobile"
     android:id="@+id/myLayout">
 
-    <TextView android:text="@string/app_header" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="33dp"
         android:src="@drawable/klcc_map"/>
@@ -27,10 +21,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Date:"
         android:id="@+id/textView2"
-        android:layout_below="@+id/imageView"
-        android:layout_marginTop="18dp"
-        android:layout_toLeftOf="@+id/textView"
-        android:layout_toStartOf="@+id/textView" />
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/button2"
+        android:layout_toStartOf="@+id/button2" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -49,8 +42,8 @@
         android:text="Time"
         android:id="@+id/textView4"
         android:layout_below="@+id/textView2"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignStart="@+id/textView2" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -69,8 +62,8 @@
         android:text="Location:"
         android:id="@+id/textView6"
         android:layout_below="@+id/textView4"
-        android:layout_toLeftOf="@+id/textView"
-        android:layout_toStartOf="@+id/textView" />
+        android:layout_alignRight="@+id/textView4"
+        android:layout_alignEnd="@+id/textView4" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -119,26 +112,28 @@
         android:layout_height="wrap_content"
         android:text="Dispatch"
         android:id="@+id/dispatchBtn"
-        android:layout_below="@+id/textView9"
-        android:layout_alignLeft="@+id/textView8"
-        android:layout_alignStart="@+id/textView8" />
+        android:layout_alignTop="@+id/button2"
+        android:layout_alignRight="@+id/textView8"
+        android:layout_alignEnd="@+id/textView8" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Close"
         android:id="@+id/button2"
-        android:layout_above="@+id/button3"
+        android:layout_below="@+id/textView9"
         android:layout_toLeftOf="@+id/textView10"
         android:layout_toStartOf="@+id/textView10" />
 
-    <Button
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click Me Now"
-        android:id="@+id/button3"
-        android:layout_below="@+id/dispatchBtn"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/imageView3"
+        android:src="@drawable/circle_logo_48px"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/textView9"
+        android:layout_toStartOf="@+id/textView9"
+        android:layout_marginBottom="33dp" />
 
 
 </RelativeLayout>
