--- a/mobile/src/main/res/layout/activity_main_activity_mobile.xml
+++ b/mobile/src/main/res/layout/activity_main_activity_mobile.xml
@@ -22,8 +22,8 @@
         android:text="Date:"
         android:id="@+id/textView2"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2" />
+        android:layout_alignLeft="@+id/imageView"
+        android:layout_alignStart="@+id/imageView" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,15 +31,14 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="28 Aug 2015"
         android:id="@+id/textView3"
-        android:layout_above="@+id/textView5"
-        android:layout_alignRight="@+id/imageView"
-        android:layout_alignEnd="@+id/imageView" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Time"
+        android:text="Time:"
         android:id="@+id/textView4"
         android:layout_below="@+id/textView2"
         android:layout_alignLeft="@+id/textView2"
@@ -70,7 +69,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="KLCC"
-        android:id="@+id/textView7"
+        android:id="@+id/tvLocation"
         android:layout_alignTop="@+id/textView6"
         android:layout_toEndOf="@+id/imageView"
         android:layout_above="@+id/textView8"
@@ -90,40 +89,40 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="780kg"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/textView9"
-        android:layout_below="@+id/textView7"
-        android:layout_alignLeft="@+id/textView7"
-        android:layout_alignStart="@+id/textView7" />
+        android:layout_below="@+id/tvLocation"
+        android:layout_alignLeft="@+id/tvLocation"
+        android:layout_alignStart="@+id/tvLocation" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="(78%)"
         android:id="@+id/textView10"
-        android:layout_alignTop="@+id/textView9"
-        android:layout_toEndOf="@+id/textView5"
-        android:layout_toRightOf="@+id/textView5" />
+        android:layout_alignLeft="@+id/textView9"
+        android:layout_alignStart="@+id/textView9"
+        android:layout_below="@+id/textView9" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Dispatch"
         android:id="@+id/dispatchBtn"
-        android:layout_alignTop="@+id/button2"
-        android:layout_alignRight="@+id/textView8"
-        android:layout_alignEnd="@+id/textView8" />
+        android:layout_below="@+id/imageView4"
+        android:layout_alignRight="@+id/imageView3"
+        android:layout_alignEnd="@+id/imageView3" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Close"
         android:id="@+id/button2"
-        android:layout_below="@+id/textView9"
-        android:layout_toLeftOf="@+id/textView10"
-        android:layout_toStartOf="@+id/textView10" />
+        android:layout_alignTop="@+id/dispatchBtn"
+        android:layout_alignLeft="@+id/textView10"
+        android:layout_alignStart="@+id/textView10" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -131,9 +130,27 @@
         android:id="@+id/imageView3"
         android:src="@drawable/circle_logo_48px"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/textView9"
-        android:layout_toStartOf="@+id/textView9"
-        android:layout_marginBottom="33dp" />
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignStart="@+id/textView4" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView4"
+        android:src="@drawable/dustbin_75"
+        android:layout_alignTop="@+id/textView9"
+        android:layout_toRightOf="@+id/textView5"
+        android:layout_toEndOf="@+id/textView5" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Circle (2015)"
+        android:id="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/imageView3"
+        android:layout_toEndOf="@+id/imageView3" />
 
 
 </RelativeLayout>
